--- a/app/globals.css
+++ b/app/globals.css
@@ -19,3 +19,30 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+.react-datepicker {
+  border: none !important;
+  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1) !important;
+  border-radius: 0.5rem !important;
+  font-size: 1.25rem !important;
+}
+
+.react-datepicker__header {
+  background-color: #fff !important;
+  border-bottom: none !important;
+  padding: 1rem !important;
+}
+
+.react-datepicker__day {
+  margin: 0.3rem !important;
+}
+
+.react-datepicker__day--selected {
+  background-color: #000 !important;
+  color: #fff !important;
+  border-radius: 50% !important;
+}
+
+.react-datepicker__navigation {
+  top: 1.2rem !important;
+}
